# Codryx

./: .gitignore  LICENSE  README.md  pyproject.toml  run_examples.py
.trae/rules/: idea.txt  rule.md
codryx/: __init__.py  audit.py  ci_dashboard.py  ci_realtime.py  cli.py  code_analyzer.py  config.py  cost_analyzer.py  expr.py  gatekeeper.py  guard.py  ide_plugin.py  license.py  migration.py  notifications.py  notifications_rich.py  rule_loader.py  scanner.py  security.py  security_remediation.py  utils.py  visuals.py
codryx/ide_ext/: lsp.py  pycharm.py  vscode.py
codryx/ide_ext/pycharm_lsp/: handlers.py  protocol.py  server.py
codryx/ide_ext/vscode_lsp/: handlers.py  protocol.py  server.py
codryx/templates/: ci_dashboard.html  dashboard.html  ide_dashboard.html  rule_graph.html
examples/: ci_dashboard_example.py  ci_realtime_example.py  example_usage.py  ide_lsp_example.py  ide_preview.py  notifications_example.py  notifications_rich_example.py  security_pipeline_example.py  vscode_plugin_example.py
examples/config/: business_rules.json
reports/: metrics.json  pyguardian_report.html  rule_graph.html
tests/: test_ci_dashboard.py  test_code_analyzer.py  test_gatekeeper.py  test_guard.py  test_ide_ext.py  test_ide_lsp.py  test_ide_plugin.py  test_license.py  test_notifications.py  test_notifications_rich.py  test_notifications_rich2.py  test_security_remediation.py
