[project]
name = "codryx"
version = "0.1.1"
description = "Python developer toolkit for code safety and health"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Muhammad Zaid Tahir", email = "mianzaid049@gmail.com" }]

keywords = ["python", "cli", "security", "code-quality", "developer-tools"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security"
]

dependencies = [
  "typer>=0.9.0",
  "rich>=13.7.0",
  "requests>=2.31.0",
  "jinja2>=3.1.2",
  "packaging>=23.2",
  "pyyaml>=6.0.1"
]

[project.scripts]
codryx = "codryx.cli:app"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "flake8",
  "mypy"
]

[project.urls]
Homepage = "https://github.com/yourusername/codryx"
Documentation = "https://github.com/yourusername/codryx#readme"
Repository = "https://github.com/yourusername/codryx"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["codryx*"]
exclude = ["reports*"]